flight details in routing params

--- a/src/app/flights/flights.component.html
+++ b/src/app/flights/flights.component.html
@@ -1,5 +1,5 @@
 <div class="row flights-container">
-  <div class="col-sm-4" *ngFor="let flight of flights$ | async">
+  <div class="col-sm-4" *ngFor="let flight of flights$ | async" (click)="showDetails(flight)">
     <app-flight-card [flight]="flight"></app-flight-card>
   </div>
 </div>
