remove flight - finished

--- a/src/app/flights/flight-form/flight-form.component.html
+++ b/src/app/flights/flight-form/flight-form.component.html
@@ -36,11 +36,13 @@
   </div>
   <div class="row">
     <div class="col-sm-8">
-      <textarea
-        matInput
-        placeholder="Additional information"
-        formControlName="additionalInformation"
-      ></textarea>
+      <mat-form-field>
+        <textarea
+          matInput
+          placeholder="Additional information"
+          formControlName="additionalInformation"
+        ></textarea>
+      </mat-form-field>
     </div>
   </div>
   <div class="row">
@@ -80,4 +82,3 @@
     </div>
   </div>
 </form>
-<pre> {{ form.value | json }}</pre>
